mpdparser: remove duplicate free of client data

https://bugzilla.gnome.org/show_bug.cgi?id=783028