ext/dash/gstmpdparser.c
@@ -2346,7 +2346,6 @@ gst_mpdparser_parse_root_node (GstMPDNode ** pointer, xmlNode * a_node)
     }
   }
 
-  gst_mpdparser_free_mpd_node (*pointer);
   *pointer = new_mpd;
   return TRUE;
 
